--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
-
+  "homepage": "https://dimadeg.github.io/portfolio/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
